  languages files using Google API for a new language. Wonderfull to start a
  new translation.
  
For developers:
- Removed some deprecated files.
- Removed treemenu library.
- Renamed all function dolibarr_xxx into dol_xxx to have same prefix everywhere.
- Rewrite clone feature for supplier invoice to work like other clone features.
- First change to manage a future feature "stock PMP value".


***** Changelog for 2.5 compared to 2.4 *****

For users:
- Sessions timeout can be configured to overwrite PHP setup.
- Can filter on date in services list.
- Support bookmark add of product cards.
- Enhancement in stock management (Automatic increase/decrease
  from order or invoice is possible).
- New filter options in prospect lists (category and level).
- New view in ECM module.
- Look enhancements for graphics (add transparency).
- Added statistics report for supplier invoices.
- Added average amount in invoices statistics reports.
- Can move a contract line to another contract of same third party.
- Add an export definition to export interventions.
- Can set umask file permissions on Unix/Linux/BSD systems.
- Miscelanous bug fixes.
- A lot of other enhancements to increase productivity.
- All phone numbers show the clicktodial link if module is enabled.
- Can define hour and minutes in intervention cards.
- Can edit a validated intervention.
- Add filters on intervention list.
- Add juridical status and number of employees in third party 
  export definition.
- A lot of enhancements and translation in withdraw module.
- Full support of Mysql option mode=strict.
- Added a new event from member module to agenda tracked events.
- Can attach a file to suppliers orders.
- Change to make Bank Account Number form more "internationnal".
- Can clone an invoice.
- Can clone an emailing.
- Reduce memory usage (about 2%).
- Add weight and size in sendings module.
- Add a fast search form on left menu for member module.
- Fix: Do not show export filter for disabled modules