@@ -68,7 +68,9 @@ function fichinter_prepare_head($fichinter)
 	$head[$h][2] = 'info';
 	$h++;
 
-	// More tabs from modules
+	// Show more tabs from modules
+	// Entries must be declared in modules descriptor with line
+	// $this->tabs = array('entity:MyModule:@mymodule:/dolibarr/mymodule/mypage.php?id=__ID__');
 	if (is_array($conf->tabs_modules['intervention']))
 	{
 		$i=0;
